Changelog for Miosix np embedded OS

- Factorized common code in the various interrupts.h and interrupts.cpp from
  the various arch directories to miosix/common. Now all cortex bsps use the
  same code for handling fault interrupts, avoiding code duplication.
- Added forwarding of file mode in the open() syscall.
- Implemented may other syscalls.
- Rewritten syscall handling for processes. Fixed many vulnerabilites in the
  checking of syscall parameters.
- Fixed MPU size calculation, added _elf_pool_start and _elf_pool_end symbols
  that a linker script supporting processes must provide.
- Thread creation no longer calls errorHandler(OUT_OF_MEMORY) if there
  is no memory to create a thread. This has been done to prevent system
  reboots when the (kernel) heap is full, especially if a process creates
  another process.
- Refactored Thread::createUserspace() to call Thread::doCreate()
- Added a per-process FileDescriptorTable
- Added ProcessBase class. The kernel used to have a null pointer as process,
  now it has a ProcessBase instance, and is the only entity that has an
  instance of PRocessBase that is not also an instance of Process.
- Merged processes branch
- breaking change: updated newlib patch to make off_t a 64bit type. This allows
  accessing files larger than 4GByte for filesystems that support it (currently,
  only DevFs). This change requires recompiling GCC!
- Changed Fat32Fs so that reads and writes are directed to a generic file
  instead of to the disk interface. Added temporary DiskAdapter class to
  maintain compatibility with the old interface until bsps are upgraded.
- Major rework and simplification of the DevFs infrastructure. Getting rid of
  stateless device files. All devices are now stateful, and to make a device you
  only have to subclass Device and implement readBlock()/writeBlock()/ioctl()
- Removed sync() syscall, replaced by ioctl()
- Added ioctl() syscall, and miosix/filesystem/ioctl.h with list of IOCTLs