@@ -57,7 +57,6 @@
 #include "interfaces/endianness.h"
 #include "miosix/e20/e20.h"
 #include "kernel/intrusive.h"
-#include "filesystem/console/console_device.h"
 #include "util/crc16.h"
 
 #ifdef WITH_PROCESSES
@@ -361,10 +360,9 @@ static void fail(const char *cause)
 {
     //Can't use iprintf here because fail() may be used in threads
     //with 256 bytes of stack, and iprintf may cause stack overflow
-    intrusive_ref_ptr<FileBase> console=DefaultConsole::instance().get();
-    console->write("Failed:\r\n",9);
-    console->write(cause,strlen(cause));
-    console->write("\r\n",2);
+    write(STDOUT_FILENO,"Failed:\r\n",9);
+    write(STDOUT_FILENO,cause,strlen(cause));
+    write(STDOUT_FILENO,"\r\n",2);
     reboot();
 }
 
