@@ -71,7 +71,7 @@ void IRQbspInit()
     IRQBitsBoardSerialPortInit();
     #endif //STDOUT_REDIRECTED_TO_DCC
     DefaultConsole::instance().IRQset(
-        intrusive_ref_ptr<ConsoleDevice>(new ConsoleAdapter));
+        intrusive_ref_ptr<Device>(new ConsoleAdapter));
 }
 
 void bspInit2()
