@@ -27,85 +27,20 @@
 
 #include "console_device.h"
 #include <errno.h>
-#include <interfaces/console.h> //FIXME: remove
 
 namespace miosix {
-
-//
-// class ConsoleDevice
-//
-
-ssize_t ConsoleDevice::write(const void *data, size_t len)
-{
-    return len;
-}
-
-ssize_t ConsoleDevice::read(void *data, size_t len)
-{
-    return -EBADF;
-}
-
-off_t ConsoleDevice::lseek(off_t pos, int whence)
-{
-    switch(whence)
-    {
-        case SEEK_SET:
-        case SEEK_CUR:
-        case SEEK_END:
-            return -EBADF;
-        default:
-            return -EINVAL;
-    }
-}
-
-int ConsoleDevice::fstat(struct stat *pstat) const
-{
-    //TODO: st_dev and st_ino
-    memset(pstat,0,sizeof(struct stat));
-    pstat->st_mode=S_IFCHR | 0755;//crwxr-xr-x Character device
-    pstat->st_nlink=1;
-    pstat->st_blksize=0; //If zero means file buffer equals to BUFSIZ
-    return 0;
-}
-
-int ConsoleDevice::isatty() const { return 1; }
-
-void ConsoleDevice::IRQwrite(const char *str) {}
-
-//
-// class ConsoleAdapter
-//
-
-// FIXME temporary -- begin
-ssize_t ConsoleAdapter::write(const void *data, size_t len)
-{
-    Console::write(reinterpret_cast<const char*>(data),len);
-    return len;
-}
-ssize_t ConsoleAdapter::read(void *data, size_t len)
-{
-    char *d=reinterpret_cast<char*>(data);
-    for(size_t i=0;i<len;i++) *d++=Console::readChar();
-    return len;
-}
-void ConsoleAdapter::IRQwrite(const char* str)
-{
-    Console::IRQwrite(str);
-    while(!Console::IRQtxComplete()) ;
-}
-// FIXME temporary -- end
 
 //
 // class TerminalDevice
 //
 
-TerminalDevice::TerminalDevice(intrusive_ref_ptr<FileBase> device)
+TerminalDevice::TerminalDevice(intrusive_ref_ptr<Device> device)
         : FileBase(intrusive_ref_ptr<FilesystemBase>()), device(device),
           mutex(), echo(true), binary(false), skipNewline(false) {}
 
 ssize_t TerminalDevice::write(const void *data, size_t len)
 {
-    if(binary) return device->write(data,len);
+    if(binary) return device->writeBlock(data,len,0);
     //No mutex here to avoid blocking writes while reads are in progress
     const char *dataStart=static_cast<const char*>(data);
     const char *buffer=dataStart;
@@ -118,17 +53,17 @@ ssize_t TerminalDevice::write(const void *data, size_t len)
             size_t chunklen=buffer-chunkstart;
             if(chunklen>0)
             {
-                ssize_t r=device->write(chunkstart,chunklen);
+                ssize_t r=device->writeBlock(chunkstart,chunklen,0);
                 if(r<=0) return chunkstart==dataStart ? r : chunkstart-dataStart;
             }
-            ssize_t r=device->write("\r\n",2);//Add \r\n
+            ssize_t r=device->writeBlock("\r\n",2,0);//Add \r\n
             if(r<=0) return chunkstart==dataStart ? r : chunkstart-dataStart;
             chunkstart=buffer+1;
         }
     }
     if(chunkstart!=buffer)
     {
-        ssize_t r=device->write(chunkstart,buffer-chunkstart);
+        ssize_t r=device->writeBlock(chunkstart,buffer-chunkstart,0);
         if(r<=0) return chunkstart==dataStart ? r : chunkstart-dataStart;
     }
     return len;
@@ -138,8 +73,8 @@ ssize_t TerminalDevice::read(void *data, size_t len)
 {
     if(binary)
     {
-        ssize_t result=device->read(data,len);
-        if(echo && result>0) device->write(data,result); //Ignore write errors
+        ssize_t result=device->readBlock(data,len,0);
+        if(echo && result>0) device->writeBlock(data,result,0);//Ignore write errors
         return result;
     }
     Lock<FastMutex> l(mutex); //Reads are serialized
@@ -150,13 +85,13 @@ ssize_t TerminalDevice::read(void *data, size_t len)
     //if it comes right after the \r
     for(int i=0;i<static_cast<int>(len);i++,buffer++)
     {
-        ssize_t r=device->read(buffer,1);
+        ssize_t r=device->readBlock(buffer,1,0);
         if(r<=0) return buffer==dataStart ? r : buffer-dataStart;
         switch(*buffer)
         {
             case '\r':
                 *buffer='\n';
-                if(echo) device->write("\r\n",2);
+                if(echo) device->writeBlock("\r\n",2,0);
                 skipNewline=true;
                 return i+1;    
             case '\n':
@@ -167,7 +102,7 @@ ssize_t TerminalDevice::read(void *data, size_t len)
                     i--; //Note that i may become -1, but it is acceptable.
                     buffer--;
                 } else {
-                    if(echo) device->write("\r\n",2);
+                    if(echo) device->writeBlock("\r\n",2,0);
                     return i+1;
                 }
                 break;
@@ -177,12 +112,12 @@ ssize_t TerminalDevice::read(void *data, size_t len)
                 int backward= i==0 ? 1 : 2;
                 i-=backward; //Note that i may become -1, but it is acceptable.
                 buffer-=backward;
-                if(echo) device->write("\033[1D \033[1D",9);
+                if(echo) device->writeBlock("\033[1D \033[1D",9,0);
                 break;
             }
             default:
                 skipNewline=false;
-                if(echo) device->write(buffer,1);
+                if(echo) device->writeBlock(buffer,1,0);
         }
     }
     return len;
@@ -190,7 +125,7 @@ ssize_t TerminalDevice::read(void *data, size_t len)
 
 off_t TerminalDevice::lseek(off_t pos, int whence)
 {
-    return device->lseek(pos,whence);
+    return -EBADF;
 }
 
 int TerminalDevice::fstat(struct stat *pstat) const
@@ -216,7 +151,7 @@ DefaultConsole& DefaultConsole::instance()
     return singleton;
 }
 
-void DefaultConsole::IRQset(intrusive_ref_ptr<ConsoleDevice> console)
+void DefaultConsole::IRQset(intrusive_ref_ptr<Device> console)
 {
     //Note: should be safe to be called also outside of IRQ as set() calls
     //IRQset()
@@ -227,7 +162,7 @@ void DefaultConsole::IRQset(intrusive_ref_ptr<ConsoleDevice> console)
     #endif //WITH_FILESYSTEM
 }
 
-DefaultConsole::DefaultConsole() : console(new ConsoleDevice)
+DefaultConsole::DefaultConsole() : console(new Device)
 #ifndef WITH_FILESYSTEM
 , terminal(new TerminalDevice(console))
 #endif //WITH_FILESYSTEM      
