@@ -28,75 +28,10 @@
 #ifndef CONSOLE_DEVICE_H
 #define	CONSOLE_DEVICE_H
 
-#include "filesystem/file.h"
+#include "filesystem/devfs/devfs.h"
 #include "kernel/sync.h"
 
 namespace miosix {
-
-/**
- * An extension to the FileBase interface that adds a new member function,
- * which is used by the kernel to write debug information before the kernel is
- * started or in case of serious errors, right before rebooting.
- * This is not a pure virtual class, and the default implementation of all
- * member functions does nothing, acting as a null console. To have a working
- * console, board support packages should subclass it an implement read(),
- * write() and IRQwrite().
- * Classes of this type are reference counted, must be allocated on the heap
- * and managed through intrusive_ref_ptr<ConsoleDevice>
- */
-class ConsoleDevice : public FileBase
-{
-public:
-    /**
-     * Constructor
-     */
-    ConsoleDevice() : FileBase(intrusive_ref_ptr<FilesystemBase>()) {}
-    
-    /**
-     * This default implementation returns as if the data was written, but
-     * does nothing
-     */
-    virtual ssize_t write(const void *data, size_t len);
-    
-    /**
-     * This default implementation returns an error
-     */
-    virtual ssize_t read(void *data, size_t len);
-    
-    /**
-     * This implementation claims to be a character device
-     */
-    virtual off_t lseek(off_t pos, int whence);
-    
-    /**
-     * This implementation returns an error
-     */
-    virtual int fstat(struct stat *pstat) const;
-    
-    /**
-     * This implementation claims to be a tty
-     */
-    virtual int isatty() const;
-    
-    /**
-     * Write a string to the Console.
-     * Can ONLY be called when the kernel is not yet started, paused or within
-     * an interrupt. This default implementation ignores writes.
-     * \param str the string to write. The string must be NUL terminated.
-     */
-    virtual void IRQwrite(const char *str);
-};
-
-/**
- * FIXME remove this when removing Console interface!
- */
-class ConsoleAdapter : public ConsoleDevice
-{
-public:
-    virtual ssize_t write(const void *data, size_t len);
-    virtual ssize_t read(void *data, size_t len);
-    virtual void IRQwrite(const char *str);
-};
 
 /**
  * Teriminal device, proxy object supporting additional terminal-specific
@@ -109,7 +44,7 @@ public:
      * Constructor
      * \param device proxed device.
      */
-    TerminalDevice(intrusive_ref_ptr<FileBase> device);
+    TerminalDevice(intrusive_ref_ptr<Device> device);
     
     /**
      * Write data to the file, if the file supports writing.
@@ -184,7 +119,7 @@ public:
     bool isBinary() const { return binary; }
     
 private:
-    intrusive_ref_ptr<FileBase> device;
+    intrusive_ref_ptr<Device> device;
     FastMutex mutex;
     bool echo;
     bool binary;
@@ -216,26 +151,26 @@ public:
      * \param console device file handling console I/O. Can only be called with
      * interrupts disabled. 
      */
-    void IRQset(intrusive_ref_ptr<ConsoleDevice> console);
+    void IRQset(intrusive_ref_ptr<Device> console);
     
     /**
      * Same as IRQset(), but can be called with interrupts enabled
      * \param console device file handling console I/O. Can only be called with
      * interrupts disabled. 
      */
-    void set(intrusive_ref_ptr<ConsoleDevice> console) { IRQset(console); }
+    void set(intrusive_ref_ptr<Device> console) { IRQset(console); }
     
     /**
      * \return the currently installed console device, wrapped in a
      * TerminalDevice
      */
-    intrusive_ref_ptr<ConsoleDevice> get() { return console; }
+    intrusive_ref_ptr<Device> get() { return console; }
     
     /**
      * \return the currently installed console device.
      * Can be called with interrupts disabled or within an interrupt routine.
      */
-    intrusive_ref_ptr<ConsoleDevice> IRQget() { return console; }
+    intrusive_ref_ptr<Device> IRQget() { return console; }
     
     #ifndef WITH_FILESYSTEM
     /**
@@ -255,7 +190,7 @@ private:
     DefaultConsole(const DefaultConsole&);
     DefaultConsole& operator= (const DefaultConsole&);
     
-    intrusive_ref_ptr<ConsoleDevice>  console;  ///< The raw console device
+    intrusive_ref_ptr<Device> console; ///< The raw console device
     #ifndef WITH_FILESYSTEM
     intrusive_ref_ptr<TerminalDevice> terminal; ///< The wrapped console device
     #endif //WITH_FILESYSTEM
